--- a/package.json
+++ b/package.json
@@ -1,1 +1,24 @@
-{"name":"sap-project","version":"1.0.0","dependencies":{"cloudinary":"^1.37.0","cors":"^2.8.5","dotenv":"^16.0.3","express":"^4.18.2","multer":"^1.4.5-lts.2","multer-storage-cloudinary":"^4.0.0"},"main":"server.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1","start":"node server.js"},"keywords":[],"author":"","license":"ISC","devDependencies":{"@vercel/node":"^2.3.0","eslint":"^8.56.0","nodemon":"^3.0.2","prettier":"^3.1.1"},"description":""}
+{
+  "name": "sap-project",
+  "version": "1.0.0",
+  "engines": {
+    "node": ">=16.x"
+  },
+  "dependencies": {
+    "cloudinary": "^1.37.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0"
+  },
+  "resolutions": {
+    "esbuild": "^0.25.0",
+    "path-to-regexp": "^6.2.3"
+  },
+  "scripts": {
+    "start": "node api/server.js",
+    "dev": "nodemon api/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
+}
