--- a/vercel.json
+++ b/vercel.json
@@ -2,21 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "api/server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server.js"
+      "dest": "api/server.js"
     },
     {
-      "src": "/(.*)",
-      "dest": "SAP-Customer.html",
-      "headers": {
-        "Content-Type": "text/html"
-      }
+      "src": "/SAP-Customer",
+      "dest": "public/SAP-Customer.html"
     }
   ]
 }
