--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
-"CLOUDINARY_CLOUD_NAME=dtwvptox0" 
-"CLOUDINARY_API_KEY=425663896911421" 
-"CLOUDINARY_API_SECRET=Vp8j_w8fW9n53AGyNUg8gxCBvko" 
+# Vercel Configuration (optional)
+VERCEL_URL=https://sap-project-nine.vercel.app
+
+# Cloudinary Configuration (required)
+CLOUDINARY_CLOUD_NAME=dtwvptox0
+CLOUDINARY_API_KEY=425663896911421
+CLOUDINARY_API_SECRET=Vp8j_w8fW9n53AGyNUg8gxCBvko
+
+# CORS Allowed Origins (optional)
+ALLOWED_ORIGINS=https://zakariamncf.github.io/sap-project,https://sap-project-nine.vercel.app
