--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Vercel Configuration (optional)
-VERCEL_URL=https://sap-project-nine.vercel.app
+VERCEL_URL=https://sap-project-3ivi.vercel.app
 
 # Cloudinary Configuration (required)
 CLOUDINARY_CLOUD_NAME=dtwvptox0
@@ -7,4 +7,4 @@ CLOUDINARY_API_KEY=425663896911421
 CLOUDINARY_API_SECRET=Vp8j_w8fW9n53AGyNUg8gxCBvko
 
 # CORS Allowed Origins (optional)
-ALLOWED_ORIGINS=https://zakariamncf.github.io/sap-project,https://sap-project-nine.vercel.app
+ALLOWED_ORIGINS=https://zakariamncf.github.io/sap-project,https://sap-project-3ivi.vercel.app
