Fix routes to serve HTML on root and allow API methods

--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,10 @@
       "src": "/SAP-Customer",
       "dest": "public/SAP-Customer.html",
       "methods": ["GET"]
+    },
+    {
+      "src": "/",
+      "dest": "public/SAP-Customer.html"
     }
   ]
 }
