--- a/package.json
+++ b/package.json
@@ -1,37 +1,16 @@
 {
-  "name": "sap-project",
+  "name": "sap-server",
   "version": "1.0.0",
-  "engines": {
-    "node": ">=16.x"
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
   },
   "dependencies": {
-    "cloudinary": "^1.41.3",
+    "cloudinary": "^1.37.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "multer": "^1.4.5-lts.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0"
-  },
-  "resolutions": {
-    "esbuild": "^0.25.0",
-    "path-to-regexp": "^6.2.3"
-  },
-  "scripts": {
-    "start": "node api/server.js",
-    "dev": "nodemon api/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ZakariaMNCF/sap-project.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ZakariaMNCF/sap-project/issues"
-  },
-  "homepage": "https://github.com/ZakariaMNCF/sap-project#readme",
-  "description": ""
+  }
 }
