--- a/.env
+++ b/.env
@@ -7,4 +7,5 @@ CLOUDINARY_API_KEY=425663896911421
 CLOUDINARY_API_SECRET=Vp8j_w8fW9n53AGyNUg8gxCBvko
 
 # CORS Allowed Origins (optional)
-ALLOWED_ORIGINS=https://zakariamncf.github.io/sap-project,https://sap-project-production.up.railway.app
+ALLOWED_ORIGINS=https://zakariamncf.github.io,https://zakariamncf.github.io/sap-project,https://sap-project-production.up.railway.app,http://localhost:3000
+
